force-app/main/default/objects/IMessage__c/IMessage__c.object-meta.xml
<CustomObject>
    <label>IMessage</label>
    <nameField>
        <label>IMessage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IMessages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>