force-app/main/default/objects/IMessage__c/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <label>Integration</label>
    <referenceTo>Integration__c</referenceTo>
    <relationshipLabel>IMessages</relationshipLabel>
    <relationshipName>IMessages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>