force-app/main/default/objects/IMessage__c/fields/Messae_Type__c.field-meta.xml
<CustomField>
    <fullName>Messae_Type__c</fullName>
    <label>Messae Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API Message</fullName>
            </value>
            <value>
                <fullName>Request Message</fullName>
            </value>
            <value>
                <fullName>Response Message</fullName>
            </value>
            <value>
                <fullName>Event Message</fullName>
            </value>
            <value>
                <fullName>sObject Message</fullName>
            </value>
            <value>
                <fullName>Basket Message</fullName>
            </value>
            <value>
                <fullName>Dataload Message</fullName>
            </value>
            <value>
                <fullName>Agent Message</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>