force-app/main/default/objects/IMessage__c/fields/ParentMessage__c.field-meta.xml
<CustomField>
    <fullName>ParentMessage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ParentMessage</label>
    <referenceTo>IMessage__c</referenceTo>
    <relationshipLabel>IMessages</relationshipLabel>
    <relationshipName>IMessages</relationshipName>
    <type>Lookup</type>
</CustomField>